--- a/.github/workflows/master_felholab4.yml
+++ b/.github/workflows/master_felholab4.yml
@@ -25,17 +25,17 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          PORT: ${{ secrets.PORT }}
+          AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
+          AZURE_STORAGE_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCESS_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
           
-      - name: Create .env file
-        run: |
-          echo "PORT=${{ secrets.PORT }}" >> .env
-          echo "AZURE_STORAGE_ACCOUNT=${{ secrets.AZURE_STORAGE_ACCOUNT }}" >> .env
-          echo "AZURE_STORAGE_ACCESS_KEY=${{ secrets.AZURE_STORAGE_ACCESS_KEY }}" >> .env
-          echo "GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}" >> .env
-          echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> .env
-          echo "MONGODB_CONNECTION=${{ secrets.MONGODB_CONNECTION }}" >> .env
-
-
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
