--- a/.github/workflows/master_felholab4.yml
+++ b/.github/workflows/master_felholab4.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v2.0
         with:
-          PORT: ${{ secrets.PORT }}
-          AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
-          AZURE_STORAGE_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCESS_KEY }}
-          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
-          MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
-          
+          envkey_PORT: ${{ secrets.PORT }}
+          envkey_AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
+          envkey_AZURE_STORAGE_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCESS_KEY }}
+          envkey_GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          envkey_SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          envkey_MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
+
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
