--- a/.github/workflows/master_felholab4backend.yml
+++ b/.github/workflows/master_felholab4backend.yml
@@ -38,7 +38,7 @@ jobs:
           envkey_FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: Compress-Archive -Path ./* -Destination release.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -62,8 +62,8 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
-        
+        run: Expand-Archive -Path release.zip
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
