--- a/.github/workflows/master_felholab4backend.yml
+++ b/.github/workflows/master_felholab4backend.yml
@@ -62,7 +62,7 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: Expand-Archive -Path release.zip
+        run: unzip release.zip
 
       - name: Login to Azure
         uses: azure/login@v1
