--- a/.github/workflows/master_felholab4backend.yml
+++ b/.github/workflows/master_felholab4backend.yml
@@ -37,14 +37,11 @@ jobs:
           envkey_MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
           envkey_FRONTEND_URL: ${{ secrets.FRONTEND_URL }}
 
-      - name: Zip artifact for deployment
-        run: Compress-Archive -Path ./* -Destination release.zip
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -60,10 +57,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v1
         with:
