--- a/.github/workflows/master_felholab4node.yml
+++ b/.github/workflows/master_felholab4node.yml
@@ -25,6 +25,16 @@ jobs:
         run: |
           npm install
 
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v2.0
+        with:
+          envkey_PORT: ${{ secrets.PORT }}
+          envkey_AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
+          envkey_AZURE_STORAGE_ACCESS_KEY: ${{ secrets.AZURE_STORAGE_ACCESS_KEY }}
+          envkey_GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          envkey_SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+          envkey_MONGODB_CONNECTION: ${{ secrets.MONGODB_CONNECTION }}
+          
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
